src/styles/_about.scss
#about {
  width: 90%;
  margin: 0 auto;
  max-width: 960px;
  @media only screen and (min-width: $cut) {
    width: 75%;
  }
}

.tech {
  // margin: 5px;
  margin: auto;
  max-width: 280px;
  // display: flex;
  // justify-content: center;
}

.user {
  text-align: center;
  font-size: 60px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  p {
    font-size: 16px;
  }
  @media only screen and (min-width: $cut) {
    flex-wrap: nowrap;
    font-size: 75px;
  }
}

.user-details {
  text-align: center;
  margin: 5px auto;
}

.selfie {
  width: 175px;
  margin-bottom: 25px;
  border-radius: 100%;
  transition: all .2s;
  box-shadow: 0;
  opacity: 1;
}

.selfie:hover {
  filter: alpha(opacity=70);
  opacity: .8;
}

